# recipe-app

./: .gitignore  README.md
Additional Information/: API list.txt  dummy_data.txt  images_link.txt  structure.txt
backend/: .env  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  food.py
backend/app/core/: __init__.py  config.py
backend/app/db/: database.py
backend/core/: config.py  database.py
backend/db/: schema.sql
