[project]
name = "recipe-app"
version = "0.1.0"
description = "FastAPI backend for Recipe App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "cloudinary>=1.44.2",
    "fastapi[standard]>=0.138.0",
    "greenlet>=3.5.2",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[tool.fastapi]
entrypoint = "app.main:app"